--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -3,5 +3,10 @@ project(XLibTests)
 include_directories("${GTEST_INCLUDE_DIR}" "${GMOCK_INCLUDE_DIR}" "${CMAKE_SOURCE_DIR}/XLib")
 link_directories("${GTEST_LIB_DIR}" "${GMOCK_LIB_DIR}")
 
-CreateTestProj(XLib_test_1 test1.cpp)
-CreateTestProj(XLib_test_2 test2.cpp)
+file(GLOB_RECURSE CPP_FILES "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp")
+source_group("Test" FILES ${CPP_FILES})
+
+foreach(curItem ${CPP_FILES})
+    get_filename_component(displayName "${curItem}" NAME_WE)
+    CreateTestProj("XLib_${displayName}" ${curItem})
+endforeach()
