Update source code CMakeLists: add the TODO file

--- a/XLib/CMakeLists.txt
+++ b/XLib/CMakeLists.txt
@@ -7,5 +7,5 @@ file(GLOB_RECURSE CPP_FILES "${CMAKE_CURRENT_SOURCE_DIR}" "*.cpp")
 file(GLOB_RECURSE H_FILES "${CMAKE_CURRENT_SOURCE_DIR}" "*.h")
 source_group("Code" FILES ${CPP_FILES} ${H_FILES})
 
-add_library(XLib ${PROJ_LIB_TYPES} ${CPP_FILES} ${H_FILES})
+add_library(XLib ${PROJ_LIB_TYPES} ${CPP_FILES} ${H_FILES} TODO.txt)
 message(STATUS "building XLib libray as: ${PROJ_LIB_TYPES}")
