Refactor CMakeLists.txt files

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -1,3 +1,8 @@
 project(XLibTests)
 
-CreateTests(XLib_ "${CMAKE_SOURCE_DIR}/XLib" XLib)
+InitExe()
+
+set(G_INCLUDE_DIRS ${G_INCLUDE_DIRS} "${CMAKE_SOURCE_DIR}/XLib")
+set(G_LINK_TARGETS ${G_LINK_TARGETS} XLib)
+
+CreateTests(XLib_)
