--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -12,11 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-project(XLibTests)
-
 InitExe()
 
-set(G_INCLUDE_DIRS ${G_INCLUDE_DIRS} "${CMAKE_SOURCE_DIR}/XLib")
-set(G_LINK_TARGETS ${G_LINK_TARGETS} XLib)
+list(APPEND G_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/XLib")
+list(APPEND G_LINK_TARGETS XLib)
 
 CreateTests(XLib_)
