--- a/zLib/CMakeLists.txt
+++ b/zLib/CMakeLists.txt
@@ -12,8 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-project (XLib VERSION 0.0.0.0)
+project (zLib VERSION 0.0.0.0)
 
 InitLib()
 
-CreateProject(XLib)
+CreateProject(zLib)
