fix top CMakeLists when not using MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,11 +41,12 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY    ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY    ${CMAKE_BINARY_DIR}/bin)
 
 set(CFLAG CMAKE_CXX_FLAGS_DEBUG)
-string(REPLACE "/MD" "/MT" ${CFLAG} "${${CFLAG}}")
-message(STATUS "link flags: ${CMAKE_CXX_FLAGS_DEBUG}")
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++11")
+elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+	string(REPLACE "/MD" "/MT" ${CFLAG} "${${CFLAG}}")
+	message(STATUS "link flags: ${CMAKE_CXX_FLAGS_DEBUG}")
 endif()
 
 if (${isTop} EQUAL 1)
